Added Testimonial Section

--- a/Scss/_global.scss
+++ b/Scss/_global.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+$GrayishBlue: hsl(233, 13%, 49%);
+
 html {
     box-sizing: border-box;
 }
@@ -9,9 +11,17 @@ body {
     min-height: 100vh
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, p {
     margin-block-start: 0;
     margin-block-end: 0;
     margin-inline-start: 0;
     margin-inline-end: 0;
+}
+
+.headings {
+    font-family: "Montserrat", sans-serif;
+    text-align: center;
+    font-weight: 700;
+    font-size: 2rem;
+    color: $GrayishBlue;
 }
