--- a/Scss/_apparel.scss
+++ b/Scss/_apparel.scss
@@ -10,7 +10,8 @@ $DarkGrayishRed: hsl(0, 6%, 24%);
   &__container {
     margin: 0 auto;
     .hero {
-      
+      display: flex;
+      flex-direction: column;
 
       &__logo {
         padding: 1rem;
@@ -103,7 +104,7 @@ $DarkGrayishRed: hsl(0, 6%, 24%);
               }
         }
           &__logo{
-              position:absolute;
+             position:absolute;
               width: 170px;
               height: 40px;
               top: 8%;
