--- a/Scss/style.css
+++ b/Scss/style.css
@@ -49,6 +49,7 @@ h1, h2, h3, h4, p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  position: relative;
 }
 
 .apparel__container .hero__logo {
@@ -456,6 +457,110 @@ h1, h2, h3, h4, p {
 @media screen and (max-width: 900px) {
   .card {
     max-width: 300px;
+  }
+}
+
+.hovercursor {
+  width: 100%;
+  height: 100vh;
+  background-color: #000;
+  color: white;
+  font-size: 4rem;
+  font-family: "Montserrat", sans-serif;
+}
+
+.hovercursor .container__cursor {
+  margin: 0 auto;
+  max-width: 1200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.hovercursor .container__cursor ul li {
+  text-decoration: none;
+  margin-bottom: 3rem;
+  list-style: none;
+  cursor: pointer;
+  letter-spacing: 5px;
+  font-weight: 600;
+}
+
+.hovercursor .container__cursor ul li:hover ~ .cursor {
+  -webkit-transform: scale(6);
+          transform: scale(6);
+}
+
+.cursor {
+  position: fixed;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: #fff;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: white;
+  pointer-events: none;
+  mix-blend-mode: difference;
+}
+
+.full-image {
+  max-width: 100vw;
+  height: 100vh;
+}
+
+.full-image .img-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.full-image .img-container img {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  overflow: hidden;
+  cursor: pointer;
+  position: relative;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+}
+
+@media screen and (max-width: 950px) {
+  .img-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .img-container img {
+    width: 100%;
+    height: 50%;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+}
+
+@media screen and (min-width: 950px) {
+  .img-container img {
+    height: 100vh;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+  .img-container img:hover {
+    -webkit-box-flex: 3;
+        -ms-flex: 3;
+            flex: 3;
   }
 }
 /*# sourceMappingURL=style.css.map */
