--- a/Scss/style.css
+++ b/Scss/style.css
@@ -513,6 +513,12 @@ h1, h2, h3, h4, p {
   mix-blend-mode: difference;
 }
 
+@media screen and (max-width: 950px) {
+  .cursor {
+    display: none;
+  }
+}
+
 .full-image {
   max-width: 100vw;
   height: 100vh;
