--- a/Scss/_global.scss
+++ b/Scss/_global.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Frijole&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Trade+Winds&display=swap');
 $GrayishBlue: hsl(233, 13%, 49%);
 
 html {
@@ -24,4 +26,19 @@ h1, h2, h3, h4, p {
     font-weight: 700;
     font-size: 2rem;
     color: $GrayishBlue;
+}
+
+$breakpoints-up: ("medium": "40em", "large": "64em", "xLarge": "87.5em");
+//639px, 1023px, 1399px
+$breakpoints-down: ("small": "39.9375em", "medium": "63.9375em", "large": "87.4375em");
+@mixin breakpoint-up($size) {
+    @media (min-width: map-get($breakpoints-up, $size)) {
+        @content;
+    }
+}
+
+@mixin breakpoint-down($size) {
+    @media (max-width: map-get($breakpoints-down, $size)) {
+        @content;
+    }
 }
